partially finish navigation menu component

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     }
 
     :root {
-        font-family: "Inter", sans-serif;
+        font-family: "Raleway", sans-serif;
         font-optical-sizing: auto;
         --radius: 0.5rem
     }
